# nanogpt-self

./: .gitignore  CMakeLists.txt  README.md  bytoken.cpp  bytoken.h  bytoken_binding.cpp  bytoken_test.py  hp_tokenizer_dict.json  nanogpt-self.ipynb  play.ipynb  play.py  play2.ipynb  tokenizer  tokenizer.cpp  tokenizer.h  tokenizer.ipynb  tokenizer.py  tokenizer_train  tokenizer_train.cpp  tokenizer_train.py
bytoken/: bytoken.pyi
dataset/harry-potter-books/: 01 Harry Potter and the Sorcerers Stone train.txt
